--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=Kan@2911
+spring.datasource.password=A2d5n5a3n
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework=debug
